# skillware

./: .gitignore  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_skill_proposal.yml  02_bug_report.yml  03_doc_fix.yml  04_framework_feature.yml  05_rfc.yml
.github/workflows/: ci.yml  codeql.yml
docs/: TESTING.md  introduction.md  vision.md
docs/contributing/: ai_native_workflow.md
docs/skills/: README.md  evm_tx_handler.md  mica_module.md  pdf_form_filler.md  pii_masker.md  prompt_rewriter.md  synthetic_generator.md  tos_evaluator.md  wallet_screening.md
docs/usage/: README.md  agent_loops.md  cli.md  ollama.md  openai.md  skill_usage_template.md
examples/: README.md  build_dataset_demo.py  claude_evm_tx_handler.py  claude_tos_evaluator.py  claude_wallet_check.py  evm_tx_handler_common.py  gemini_evm_tx_handler.py  gemini_tos_evaluator.py  gemini_wallet_check.py  mica_rag_flow.py  ollama_skills_test.py  ollama_tos_evaluator.py  pii_guardrail_flow.py  prompt_compression_demo.py
skills/compliance/pii_masker/: skill.py
skills/compliance/tos_evaluator/: __init__.py  card.json  instructions.md  manifest.yaml  skill.py  test_skill.py
skills/data_engineering/synthetic_generator/: skill.py
skills/defi/evm_tx_handler/: abis.py  card.json  config.yaml.example  instructions.md  manifest.yaml  skill.py  test_skill.py
skills/defi/evm_tx_handler/data/: addressbook.yaml  chains.yaml  tokens.yaml
skills/finance/wallet_screening/: card.json  instructions.md  manifest.yaml  skill.py  test_skill.py
skills/optimization/prompt_rewriter/: skill.py
skillware/: cli.py
skillware/core/: loader.py
templates/python_skill/: README.md
tests/: test_cli.py  test_loader.py  test_skill_issuer.py
tests/skills/compliance/: test_pii_masker.py  test_tos_evaluator.py
tests/skills/data_engineering/: test_synthetic_generator.py
tests/skills/finance/: test_wallet_screening.py
tests/skills/optimization/: test_prompt_rewriter.py
