[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skillware"
version = "0.2.5"
description = "A framework for modular, self-contained AI skills."
readme = "README.md"
authors = [
  { name = "ARPA Hellenic Logic Systems", email = "skillware-os@arpacorp.net" },
]
urls = { "Homepage" = "https://arpacorp.net", "Repository" = "https://github.com/arpahls/skillware" }
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pyyaml",
    "anthropic",
    "google-generativeai",
    "pymupdf",
    "beautifulsoup4",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "flake8",
    "black",
]

[tool.setuptools.packages.find]
include = ["skillware*", "skills*"]
