[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skillware"
version = "0.3.5"
description = "A framework for modular, self-contained AI skills."
readme = "README.md"
authors = [
  { name = "ARPA Hellenic Logical Systems", email = "skillware-os@arpacorp.net" },
]
urls = { "Homepage" = "https://arpacorp.net", "Repository" = "https://github.com/arpahls/skillware" }
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pyyaml",
    "python-dotenv",
    "beautifulsoup4",
    "packaging",
]
requires-python = ">=3.10"

[project.scripts]
skillware = "skillware.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "flake8",
    "black",
]
cli = [
    "rich>=13.0",
]
gemini = [
    "google-genai",
]
claude = [
    "anthropic",
]
openai = [
    "openai",
]
office = [
    "pymupdf",
]
all = [
    "rich>=13.0",
    "google-genai",
    "anthropic",
    "openai",
    "pymupdf",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["skillware*", "skills*"]

# Non-Python skill assets (yaml, md, json, data/) ship via MANIFEST.in (graft skills)
# and this wildcard. No per-skill entries needed when adding registry skills.
[tool.setuptools.package-data]
skills = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["tests", "skills"]
addopts = "--ignore=examples"

[tool.black]
line-length = 88
target-version = ["py310"]
